--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components; 
 @tailwind utilities;
 
+/* 
 :root {
   --foreground-rgb: 0, 0, 0;
 }
@@ -10,7 +11,7 @@
   :root {
     --foreground-rgb: 255, 255, 255;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
